--- a/blog/app/views/main.html
+++ b/blog/app/views/main.html
@@ -1,23 +1,36 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <!-- <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p> -->
-  <!-- <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p> -->
-</div>
+<!--
+==================================================
+Slider Section Start
+================================================== -->
+<section id="hero-area" >
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="block wow fadeInUp" data-wow-delay=".3s">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+                    <!-- Slider -->
+                    <section class="cd-intro">
+                        <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
+                        <span>HI, MY NAME IS MARCOS & I AM A</span><br>
+                        <span class="cd-words-wrapper">
+                            <b class="is-visible">DESIGNER</b>
+                            <b>DEVELOPER</b>
+                            <b>FATHER</b>
+                        </span>
+                        </h1>
+                        </section> <!-- cd-intro -->
+                        <!-- /.slider -->
+                        <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
+                            With X years experience, I've occupied many roles including digital design director,<br> web designer and developer. This site showcases some of my work.
+                        </h2>
+                        <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="#works" >View Works</a>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!--/#main-slider-->
+    <!--
+    ==================================================
+    Slider Section Start
+    ================================================== -->
