*Corrigindo o problema de inclusao do script de slider.

--- a/blog/app/views/main.html
+++ b/blog/app/views/main.html
@@ -34,3 +34,5 @@ Slider Section Start
     ==================================================
     Slider Section Start
     ================================================== -->
+
+<!-- <script src="resources/slider.js"></script> -->
