*Movendo o header para uma partial page.

--- a/blog/app/views/main.html
+++ b/blog/app/views/main.html
@@ -2,6 +2,7 @@
 ==================================================
 Slider Section Start
 ================================================== -->
+<script src="resources/slider.js"></script>
 <section id="hero-area" >
     <div class="container">
         <div class="row">
